--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-	
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="The web site gives some detailed information about selected special products of Bosch-Home Appliances"/>
 	</head>
 	<body>
 	
