dvMain and dvHead were added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta name="description" content="The web site gives some detailed information about selected special products of Bosch-Home Appliances"/>
 	</head>
 	<body>
-	
+		<div id="dvMain">
+				<div id="dvHead">
+				
+				</div>
+		</div>
 	</body>
 </html>
