bosch_index.png image, /MyBasicSite/s/img/html folders were created, heading(h1) and firm logo were added as a table!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 	<body>
 		<div id="dvMain">
 				<div id="dvHead">
-				
+					<table id="baslik-logo">
+						<thead id="baslik">
+								<tr>
+									<td id="baslik1"><h1 title="Home Appliance">HOME APPLIANCES</h1></td>
+									<td><a href="http://www.bosch-home.co.uk/" target="_blank">
+									<img src="../s/img/html/bosch_index.png" alt="Bosch_Home_Appliances" class="firm_logo"/></a></td>
+								</tr>
+						</thead>          			
+					</table> 
 				</div>
 		</div>
 	</body>
