Washers and Dryers product heading, Washing machines subproduct heading, two subproductmodels whose ids WAS32461GB and WAE244B1GB, and their details were added!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,39 @@
 					</table> 
 				</div>
 			<div id="dvContent">
-			
+				<div class="products">
+					<h2>Washers and Dryers</h2>
+					<div class="subproduct" id="dvWashing">
+						<h3>Washing machines</h3>
+						<div class="subproductmodel" id="WAS32461GB">
+							<h4><abbr title="Product Name">Bosch Logixx 8 VarioPerfect Automatic washing machine WAS32461GB</abbr></h4>
+							<div class="productcontent">
+								<a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washing-machines/washing-machines-range/list.html" target="_blank">
+									<img src="../s/img/html/washing_machine.png" alt="Bosch Logixx 8 VarioPerfect Automatic washing machine WAS32461GB" class="product_logo"/></a>
+								<p>
+									White. 8kg capacity. <b>1600 rpm.</b> Energy A less 30%. <b>(30% better than A)</b>. EcoSilence Drive. AntiVibration panels and sound package.
+									<b>EcoPerfect.</b> SpeedPerfect.Reduced Ironing and Aqua Plus options. Mixed Load. <b>Super Quick 15.</b> Dark Wash. 
+									Sensitive. Time Delay and Time Remaining. <b>Reload function.</b> Child Lock.
+									</br> <span><a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washing-machines/washing-machines-range/WAS32461GB.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="subproductmodel" id="WAE244B1GB">
+					<h4><abbr title="Product Name">Black Edition VarioPerfect Automatic washing machine WAE244B1GB</abbr></h4>
+					<div class="productcontent">
+						<a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washing-machines/washing-machines-range/list.html?page=2" target="_blank">
+									<img src="../s/img/html/washing_machine_black.png" alt="Black Edition VarioPerfect Automatic washing machine WAE244B1GB" class="product_logo"/></a>
+						<p>,
+							Black. 7kg capacity. <b>1200 rpm.</b> <b>Energy A less 20% (20% better than A).</b> EcoPerfect. SpeedPerfect. Reduced Ironing. 
+							Aqua Plus Option. Mixed Load. <b>Super Quick 15.</b> Dark Wash. Sensitive. Sportswear. Time Delay and Time Remaining. <b>Reload function.</b> Child Lock.
+							</br> <span><a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washing-machines/washing-machines-range/WAS32461GB.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
+						</p>
+					</div>
+				</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
