Washer dryers subproduct and a subproductmodel whose ids WVD2452BGB and its details were added!

--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
 						</p>
 					</div>
 				</div>
+				<div class="subproduct" id="dvWashingDryers">
+					<h3>Washer dryers</h3>
+					<div class="subproductmodel" id="WVD2452BGB">
+						<h4><abbr title="Product Name">Bosch Black Edition Automatic washer dryer WVD2452BGB</abbr></h4>
+						<div class="productcontent">
+							<a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washer-dryers/washer-dyers-range/list.html" target="_blank">
+									<img src="../s/img/html/washing_machine_black.png" alt="Bosch Black Edition Automatic washer dryer WVD2452BGB" class="product_logo"/></a>
+							<p>
+								Black. <b>5kg/2.5kg capacity. Energy label C. 1200 rpm.</b> Time delay. Time Remaining. Autodry. Load recommendation. Detergent overdosage. 
+								Reload. Child lock. Wash Plus. Prewash. Rinse Plus. Reduced Ironing. LCD Display. Dark. Sensitive. Sport. <b>Super quick 15.</b> Mixed load
+								</br> <span><a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washer-dryers/washer-dyers-range/WVD2452BGB.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
+							</p>
+						</div>																					
+					</div>
+				</div>
 					</div>
 				</div>
 			</div>
