Fridges and Freezers product heading,their subproducts whose headings are Fridges, Freezers, their subproductmodels whose ids are KIR18A51GB, KSR38X51, GTM26A00GB, and their details were added!

--- a/index.html
+++ b/index.html
@@ -63,6 +63,48 @@
 						</div>																					
 					</div>
 				</div>
+				<div class="products">	
+					<h2>Fridges and Freezers</h2>
+					<div class="subproduct" id="dvFridges">
+						<h3>Fridges</h3>
+						<div class="subproductmodel" id="KIR18A51GB">
+							<h4><abbr title="Product Name">Fully integrated Built-in fridge KIR18A51GB</abbr></h4>
+							<div class="productcontent">
+								<a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/list.html" target="_blank">
+									<img src="../s/img/html/fridge_1.png" alt="Fully integrated Built-in fridge KIR18A51GB" class="product_logo"/></a>
+								<p>
+									87cm high fridge. Flat hinge design. <b>Auto defrost. </b>Internal LED electronic controls. SuperCool function. <b>A+ rated</b>
+									</br> <span><a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/KIR18A51GB.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
+								</p>
+							</div>
+						</div>
+						<div class="subproductmodel" id="KSR38X51">
+							<h4><abbr title="Product Name">Upright fridge KSR38X51</abbr></h4>
+							<div class="productcontent">
+								<a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/list.html?page=2" target="_blank">
+									<img src="../s/img/html/fridge_2.png" alt="Upright fridge KSR38X51" class="product_logo"/></a>
+								<p>
+									Black. 186 x 60cm fridge. Auto defrost. Internal LED electronic controls. <b>SuperCool function.</b> LED interior light. <b>A+ rated</b>
+									</br> <span><a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/KSR38X51.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
+								</p>
+							</div>
+						</div>
+					</div>	
+					<div class="subproduct" id="dvFreezers">	
+						<h3>Freezers</h3>	
+						<div class="subproductmodel" id="GTM26A00GB">
+							<h4><abbr title="Product Name">Chest Freezer GTM26A00GB</abbr></h4>
+							<div class="productcontent">
+								<a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/freezers/list.html" target="_blank">
+									<img src="../s/img/html/freezer_1.png" alt="Chest Freezer GTM26A00GB" class="product_logo"/></a>
+								<p>
+									White. 89 x 112cm. 225L net capacity. SuperFreezing function. <b>Economy/holiday setting.</b> 2 baskets included. Visual and acoustic alarm system. 
+									Defrost water outlet. Lockable. <b>A+ rated.</b>
+									</br> <span><a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/freezers/GTM26A00GB.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
+								</p>
+							</div>
+						</div>
+					</div>
 					</div>
 				</div>
 			</div>
