Line callouts were added!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 						</thead>          			
 					</table> 
 				</div>
+		<hr class="satirCizgisi"/>
 			<div id="dvContent">
 				<div class="products">
 					<h2>Washers and Dryers</h2>
@@ -63,6 +64,7 @@
 						</div>																					
 					</div>
 				</div>
+				<hr class="product"/>
 				<div class="products">	
 					<h2>Fridges and Freezers</h2>
 					<div class="subproduct" id="dvFridges">
@@ -105,6 +107,7 @@
 							</div>
 						</div>
 					</div>
+					<hr class="satirCizgisi"/>
 					</div>
 				</div>
 			</div>
