urunnot form was implemented!

--- a/index.html
+++ b/index.html
@@ -108,6 +108,47 @@
 						</div>
 					</div>
 					<hr class="satirCizgisi"/>
+					<div>
+						<form action="" id="urunnot">
+							<table id="subjective">
+								<thead> <b>Subjective Scoring</b></thead><br/><br/>
+								<tbody>
+									<tr><td>Name Surname:</td><td><input type="text" placeholder ="Enter name surname..." class="yazi"  /><br/></td></tr>
+									<tr><td>Occupation:</td><td ><input type="text" placeholder ="Enter your occupation..." class="yazi" /></td></tr>
+									<tr><td>E-mail:</td><td ><input type="text" placeholder ="Enter your mail address..." class="yazi" /></td></tr>
+									<tr><td>Products:</td><td id="prd" >
+										<select  name="products def">
+											<option>Bosch Logixx 8 VarioPerfect Automatic washing machine WAS32461GB</option>
+											<option>Black Edition VarioPerfect Automatic washing machine WAE244B1GB</option>
+											<option>Bosch Black Edition Automatic washer dryer WVD2452BGB</option>
+											<option>Fully integrated Built-in fridge KIR18A51GB</option>
+											<option>Upright fridge KSR38X51</option>
+											<option>Chest Freezer GTM26A00GB</option>
+										</select>
+									</td></tr>
+									<tr><td>Point:</td><td id="prd" >
+										<select  name="user point">
+											<option>1</option>
+											<option>2</option>
+											<option>3</option>
+											<option>4</option>
+											<option>5</option>
+											<option>6</option>
+											<option>7</option>
+											<option>8</option>
+											<option>9</option>
+											<option>10</option>
+										</select>
+									</td></tr>
+									<tr><td id="cmnt">Comment:</td><td><textarea name="yrm" rows="5" cols="20"/></textarea></td></tr>
+									<tr>
+									<td></td>
+									<td><button type="button">Send</button></td>
+									</tr>
+								</tbody>
+							</table>
+						</form>
+					</div>
 					</div>
 				</div>
 			</div>
