image paths were corrected!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 								<tr>
 									<td id="baslik1"><h1 title="Home Appliance">HOME APPLIANCES</h1></td>
 									<td><a href="http://www.bosch-home.co.uk/" target="_blank">
-									<img src="../s/img/html/bosch_index.png" alt="Bosch_Home_Appliances" class="firm_logo"/></a></td>
+									<img src="./s/img/html/bosch_index.png" alt="Bosch_Home_Appliances" class="firm_logo"/></a></td>
 								</tr>
 						</thead>          			
 					</table> 
@@ -26,7 +26,7 @@
 							<h4><abbr title="Product Name">Bosch Logixx 8 VarioPerfect Automatic washing machine WAS32461GB</abbr></h4>
 							<div class="productcontent">
 								<a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washing-machines/washing-machines-range/list.html" target="_blank">
-									<img src="../s/img/html/washing_machine.png" alt="Bosch Logixx 8 VarioPerfect Automatic washing machine WAS32461GB" class="product_logo"/></a>
+									<img src="./s/img/html/washing_machine.png" alt="Bosch Logixx 8 VarioPerfect Automatic washing machine WAS32461GB" class="product_logo"/></a>
 								<p>
 									White. 8kg capacity. <b>1600 rpm.</b> Energy A less 30%. <b>(30% better than A)</b>. EcoSilence Drive. AntiVibration panels and sound package.
 									<b>EcoPerfect.</b> SpeedPerfect.Reduced Ironing and Aqua Plus options. Mixed Load. <b>Super Quick 15.</b> Dark Wash. 
@@ -41,7 +41,7 @@
 					<h4><abbr title="Product Name">Black Edition VarioPerfect Automatic washing machine WAE244B1GB</abbr></h4>
 					<div class="productcontent">
 						<a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washing-machines/washing-machines-range/list.html?page=2" target="_blank">
-									<img src="../s/img/html/washing_machine_black.png" alt="Black Edition VarioPerfect Automatic washing machine WAE244B1GB" class="product_logo"/></a>
+									<img src="./s/img/html/washing_machine_black.png" alt="Black Edition VarioPerfect Automatic washing machine WAE244B1GB" class="product_logo"/></a>
 						<p>,
 							Black. 7kg capacity. <b>1200 rpm.</b> <b>Energy A less 20% (20% better than A).</b> EcoPerfect. SpeedPerfect. Reduced Ironing. 
 							Aqua Plus Option. Mixed Load. <b>Super Quick 15.</b> Dark Wash. Sensitive. Sportswear. Time Delay and Time Remaining. <b>Reload function.</b> Child Lock.
@@ -55,7 +55,7 @@
 						<h4><abbr title="Product Name">Bosch Black Edition Automatic washer dryer WVD2452BGB</abbr></h4>
 						<div class="productcontent">
 							<a href="http://www.bosch-home.co.uk/our-products/washers-and-dryers/washer-dryers/washer-dyers-range/list.html" target="_blank">
-									<img src="../s/img/html/washing_machine_black.png" alt="Bosch Black Edition Automatic washer dryer WVD2452BGB" class="product_logo"/></a>
+									<img src="./s/img/html/washing_machine_black.png" alt="Bosch Black Edition Automatic washer dryer WVD2452BGB" class="product_logo"/></a>
 							<p>
 								Black. <b>5kg/2.5kg capacity. Energy label C. 1200 rpm.</b> Time delay. Time Remaining. Autodry. Load recommendation. Detergent overdosage. 
 								Reload. Child lock. Wash Plus. Prewash. Rinse Plus. Reduced Ironing. LCD Display. Dark. Sensitive. Sport. <b>Super quick 15.</b> Mixed load
@@ -73,7 +73,7 @@
 							<h4><abbr title="Product Name">Fully integrated Built-in fridge KIR18A51GB</abbr></h4>
 							<div class="productcontent">
 								<a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/list.html" target="_blank">
-									<img src="../s/img/html/fridge_1.png" alt="Fully integrated Built-in fridge KIR18A51GB" class="product_logo"/></a>
+									<img src="./s/img/html/fridge_1.png" alt="Fully integrated Built-in fridge KIR18A51GB" class="product_logo"/></a>
 								<p>
 									87cm high fridge. Flat hinge design. <b>Auto defrost. </b>Internal LED electronic controls. SuperCool function. <b>A+ rated</b>
 									</br> <span><a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/KIR18A51GB.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
@@ -84,7 +84,7 @@
 							<h4><abbr title="Product Name">Upright fridge KSR38X51</abbr></h4>
 							<div class="productcontent">
 								<a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/list.html?page=2" target="_blank">
-									<img src="../s/img/html/fridge_2.png" alt="Upright fridge KSR38X51" class="product_logo"/></a>
+									<img src="./s/img/html/fridge_2.png" alt="Upright fridge KSR38X51" class="product_logo"/></a>
 								<p>
 									Black. 186 x 60cm fridge. Auto defrost. Internal LED electronic controls. <b>SuperCool function.</b> LED interior light. <b>A+ rated</b>
 									</br> <span><a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/fridges/KSR38X51.html?source=browse" rel="nofollow" target="_blank">Click for more details...</a></span>
@@ -98,7 +98,7 @@
 							<h4><abbr title="Product Name">Chest Freezer GTM26A00GB</abbr></h4>
 							<div class="productcontent">
 								<a href="http://www.bosch-home.co.uk/our-products/fridges-and-freezers/freezers/list.html" target="_blank">
-									<img src="../s/img/html/freezer_1.png" alt="Chest Freezer GTM26A00GB" class="product_logo"/></a>
+									<img src="./s/img/html/freezer_1.png" alt="Chest Freezer GTM26A00GB" class="product_logo"/></a>
 								<p>
 									White. 89 x 112cm. 225L net capacity. SuperFreezing function. <b>Economy/holiday setting.</b> 2 baskets included. Visual and acoustic alarm system. 
 									Defrost water outlet. Lockable. <b>A+ rated.</b>
