--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="The web site gives some detailed information about selected special products of Bosch-Home Appliances"/>
+		<link href="./s/css/reset.css" rel="stylesheet" type="text/css"/>
+		<link href="./s/css/main.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
 		<div id="dvMain">
